# RustMatch3

./: .gitignore  LICENSE  README.md  RustMatch3.sln  cargo.toml
dds_parser/: Cargo.toml
dds_parser/src/: dds_parser_lib.rs
dds_parser/tests/: dds_parser_integration_tests.rs
dds_parser/tests/data/nvtt_export/: white_4x4_bc1_mips_dxt10.dds  white_4x4_bc1_mips_dxt9.dds  white_4x4_bc2_mips_dxt10.dds  white_4x4_bc2_mips_dxt9.dds  white_4x4_bc3_mips_dxt10.dds  white_4x4_bc3_mips_dxt9.dds  white_4x4_bc4_mips_dxt10.dds  white_4x4_bc4_mips_dxt9.dds  white_4x4_bc5_mips_dxt10.dds  white_4x4_bc5_mips_dxt9.dds  white_4x4_bc6_mips_dxt10.dds  white_4x4_bc7_mips_dxt10.dds
dds_parser/tests/data/paintnet/: black_4x4_bc1.dds  black_4x4_mips_bc1.dds  black_8x4_bc1.dds  black_8x4_mips_bc1.dds  red_4x4_bc1.dds  red_smiley_64x64_bc1.dds  white_4x4_bc2.dds  white_4x4_bc2_mips.dds  white_4x4_bc3_mips.dds  white_5x4_bc1.dds  white_5x4_rgba8.dds
graphics_device/: Cargo.toml
graphics_device/src/: graphics_device_lib.rs
match3_game/: Cargo.toml  build.ninja  compile_src_data.bat  match3_game.vcxproj  match3_game.vcxproj.filters
match3_game/src/: gameplay.rs  gamestates.rs  main.rs  pause.rs
match3_game/src/gamestates/: gameplay.rs  pause.rs
match3_game/src_data/: shaders.ninja  textures.ninja
match3_game/src_data/shaders/: game_space_quad.hlsl  screen_space_quad.hlsl
match3_game/src_data/textures/engine/: black_white_grid_64x64.dds
match3_game/target_data/shaders/: game_space_quad.psb  game_space_quad.vsb  screen_space_quad.psb  screen_space_quad.vsb
os_window/: Cargo.toml
(+23 files in other folders)
