[package]
name = "match3_game"
version = "0.1.0"
authors = ["Jendrik Illner <jendrik.illner@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "d3d11", "d3d11_1", "winerror", "dxgi1_2"] }
std_time_ext = { path = "../std_time_ext" }
os_window = { path = "../os_window" }